# mnp-liver

./: Dockerfile  README.md  compare_header.py  mnp_analysis.ipynb  mnp_analysis_docker.ipynb  pyproject.toml  read_csv.ipynb  requirements.txt  umap_plot.py
cellpose/: mnp_segmentation.ipynb
cellprofiler/: illum_cal.cpproj  segmentation.cpproj
clustering/: algorithms_exploration.ipynb
mnp_test_image/Hep/P1/: C11_01_1_6_GFP_001.tif  C11_01_2_6_Propidium Iodide_001.tif  C11_01_3_6_DAPI_001.tif
mnp_test_image/Hep/P2/: B2_01_1_4_GFP_001.tif  B2_01_2_4_Propidium Iodide_001.tif  B2_01_3_4_DAPI_001.tif
mnp_test_image/Hep/P3/: B10_02_1_3_GFP_001.tif  B10_02_2_3_Propidium Iodide_001.tif  B10_02_3_3_DAPI_001.tif
mnp_test_image/Huh/P1/: E3_02_1_4_GFP_001.tif  E3_02_2_4_Propidium Iodide_001.tif
mnp_test_image/Huh/P2/: E6_02_1_2_GFP_001.tif  E6_02_2_2_Propidium Iodide_001.tif
mnp_test_image/Huh/P3/: B3_01_1_5_GFP_001.tif  B3_01_2_5_Propidium Iodide_001.tif
notebooks/: feature_selection.ipynb  mnp_analysis.ipynb  singlecell_feature_analysis.ipynb
python/: clustering.py  config.py  main.py  preprocessing.py  utils.py  visualization.py
