[project]
name = "mnp-liver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib==3.10.3",
    "nbformat>=4.2.0",
    "numpy>=1.23.2,<2.3",
    "pandas>=1.5.3,<2.3",
    "plotly>=6.1.1",
    "scikit-learn>=1.6.1",
    "seaborn==0.13.2",
    "umap==0.1.1",
]
