[project]
name = "mnp-liver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib==3.10.3",
    "numpy>=1.23.2,<2.3",
    "pandas>=1.5.3,<2.3",
    "scikit-learn>=1.6.1",
    "seaborn==0.13.2",
    "umap-learn==0.5.7",
    "plotly==6.1.1",
    "nbformat==5.10.4",
    "kaleido==0.2.1",
    "ipywidgets>=8.1.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
